@@ -1,3 +1,7 @@
+2014-03-21  Benno Schulenberg  <bensberg@justemail.net>
+	* src/chars.c (is_punct_mbchar, mbstrchr) - Elide a variable,
+	thus making two ifs identical to six others.
+
 2014-03-19  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/nanorc.sample.in - Document the changed whitespace defaults.
 	* src/global.c, doc/man/nanorc.5 - Allow softwrap to be rebound.
